--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,11 +18,13 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.4.0",
     "express": "^4.21.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.0.0",
+    "multer": "^2.0.2",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
     "uuid": "^10.0.0",
@@ -34,6 +36,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.19.0",
     "tsx": "^4.19.0",
