--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,17 +16,23 @@
     "@prisma/client": "^5.19.0",
     "@whatsapp-bot/shared": "workspace:*",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.69.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "dotenv": "^16.4.0",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
+    "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
+    "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.0.0",
     "multer": "^2.0.2",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
+    "prom-client": "^15.1.3",
+    "stripe": "^20.3.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.0"
   },
