--- a/.env.production.example
+++ b/.env.production.example
@@ -46,6 +46,14 @@ STRIPE_WEBHOOK_SECRET=whsec_CHANGE_ME
 STRIPE_PRICE_ID_PRO=price_CHANGE_ME_PRO
 STRIPE_PRICE_ID_BUSINESS=price_CHANGE_ME_BUSINESS
 
+# ── AI Provider ───────────────────────────────────────────────────────
+# Set to 'anthropic' or 'openai' to enable AI intent detection + response generation
+AI_PROVIDER=none
+# ANTHROPIC_API_KEY=sk-ant-CHANGE_ME
+# OPENAI_API_KEY=sk-CHANGE_ME
+# AI_MODEL=claude-3-5-haiku-20241022
+# AI_TIMEOUT_MS=5000
+
 # ── Dashboard ─────────────────────────────────────────────────────────
 DASHBOARD_URL=https://your-domain.com
 CORS_ORIGIN=https://your-domain.com
