--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.76.0",
     "@prisma/client": "^5.19.0",
     "@whatsapp-bot/shared": "workspace:*",
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.0.0",
     "multer": "^2.0.2",
+    "openai": "^6.22.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
     "prom-client": "^15.1.3",
