--- a/.env.example
+++ b/.env.example
@@ -23,11 +23,12 @@ WEBHOOK_VERIFY_TOKEN=my-webhook-verify-token
 N8N_WEBHOOK_URL=http://localhost:5678/webhook/whatsapp-events
 AUTOMATION_API_KEY=change-me-automation-secret-key
 
-# AI Provider (anthropic | openai | none)
+# AI Provider (anthropic | openai | gemini | none)
 AI_PROVIDER=none
 # ANTHROPIC_API_KEY=sk-ant-...
 # OPENAI_API_KEY=sk-...
-# AI_MODEL=claude-3-5-haiku-20241022  # or gpt-4o-mini for OpenAI
+# GEMINI_API_KEY=AIza...
+# AI_MODEL=claude-3-5-haiku-20241022  # or gpt-4o-mini for OpenAI, gemini-2.0-flash for Gemini
 # AI_TIMEOUT_MS=5000
 
 # Dashboard
