--- a/.env.production.example
+++ b/.env.production.example
@@ -47,11 +47,12 @@ STRIPE_PRICE_ID_PRO=price_CHANGE_ME_PRO
 STRIPE_PRICE_ID_BUSINESS=price_CHANGE_ME_BUSINESS
 
 # ── AI Provider ───────────────────────────────────────────────────────
-# Set to 'anthropic' or 'openai' to enable AI intent detection + response generation
+# Set to 'anthropic', 'openai', or 'gemini' to enable AI intent detection + response generation
 AI_PROVIDER=none
 # ANTHROPIC_API_KEY=sk-ant-CHANGE_ME
 # OPENAI_API_KEY=sk-CHANGE_ME
-# AI_MODEL=claude-3-5-haiku-20241022
+# GEMINI_API_KEY=AIza-CHANGE_ME
+# AI_MODEL=claude-3-5-haiku-20241022  # or gpt-4o-mini / gemini-2.0-flash
 # AI_TIMEOUT_MS=5000
 
 # ── Dashboard ─────────────────────────────────────────────────────────
