--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.76.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.19.0",
     "@whatsapp-bot/shared": "workspace:*",
     "bcryptjs": "^2.4.3",
