--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,7 @@
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
     "prom-client": "^15.1.3",
+    "resend": "^6.9.2",
     "stripe": "^20.3.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.0"
